@@ -1,4 +1,4 @@
-/* $Id: views-admin.css,v 1.13.2.1 2009-09-15 17:32:15 merlinofchaos Exp $ */
+/* $Id: views-admin.css,v 1.13.2.2 2009-11-18 20:24:18 merlinofchaos Exp $ */
 
 /*
  * Summary pad
@@ -211,6 +211,7 @@ div.views-display-deleted div.tab-section {
 
 #views-ajax-title {
   background: #f6f6f6;
+  color: #000;
   border-left: #D6DBDE 1px solid;
   border-right: #D6DBDE 1px solid;
   margin: 0 0 0 118px;
@@ -220,6 +221,7 @@ div.views-display-deleted div.tab-section {
 
 #views-ajax-pad .message {
   background: #f6f6f6;
+  color: #000;
   margin-left: 118px;
   border: #D6DBDE 1px solid;
   border-top: 0;
@@ -230,6 +232,7 @@ div.views-display-deleted div.tab-section {
 
 #views-ajax-pad form {
   background: #fff;
+  color: #000;
   margin-left: 118px;
   border: #D6DBDE 1px solid;
   padding-top: 3px;
