@@ -9,6 +9,7 @@ Views 6.x-3.x-dev
     o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
     o #592476 by Garrett Albright: Remove redundant CSS from views-list.css
     o #366250 by Markus Petrux: Fix glitches with tabledrag and jQuery 1.3.
+    o #581616 by cangeceiro: Defend text color from themes in Views UI.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
